flux/apps/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    matchLabels:
      app: sonarr
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarr
      annotations:
        backup.velero.io/backup-volumes: config
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
              name: sonarr
          volumeMounts:
            - name: shows
              mountPath: /tv
            - name: downloads
              mountPath: /downloads
            - name: config
              mountPath: /config
      volumes:
        - name: shows
          hostPath:
            path: /home/padawan/media/shows
            type: Directory
        - name: downloads
          hostPath:
            path: /media/downloads
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
